[package]
name = "ansi_colour"
description = "Representation of ansi colours"
version = "0.5.1"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stevebob/ansi-colour"
repository = "https://github.com/stevebob/ansi-colour.git"
documentation = "https://docs.rs/ansi_colour"

[features]
serialize = ["serde"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"], optional = true }
