[package]
name = "ansi_colour"
description = "Representation of ansi colours"
version = "0.5.3"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stevebob/ansi-colour"
repository = "https://github.com/stevebob/ansi-colour.git"
documentation = "https://docs.rs/ansi_colour"

[features]
serialize = ["serde", "rgb24/serialize"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"], optional = true }
rgb24 = "0.1"
